--- a/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_capital_l_polish.yml
+++ b/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_capital_l_polish.yml
@@ -1,36 +1,36 @@
 ﻿l_polish:
 
 #Senate
- decision_pd_arcology_senate: "Zbuduj kopułę senatu"
- decision_pd_arcology_senate_desc: "Aby sprostać rosnącym potrzebom naszego państwa, musimy wznieść monumentalny budynek senatu w naszej stolicy, przeznaczając znaczną przestrzeń na wzmocnienie zdolności administracyjnych rządu."
+ decision_pd_arcology_senate: "Zbuduj Kopułę Senatu"
+ decision_pd_arcology_senate_desc: "Aby sprostać rosnącym potrzebom naszego państwa, musimy wznieść monumentalny budynek Senatu w naszej stolicy, przeznaczając znaczną przestrzeń na wzmocnienie zdolności administracyjnych rządu."
  decision_pd_arcology_senate_effects: "Dodaje §Y$d_pd_senate_building$§! do tej stolicy, zamieniając potencjalne dzielnice w celu zwiększenia możliwości administracyjnych naszego rządu."
- d_pd_senate_building: "Kopuła senatu"
- d_pd_senate_building_desc: "Kopuła senatu, majestatyczny symbol rządów, góruje jako administracyjne serce, w którym kształtowana jest przyszłość naszej cywilizacji."
+ d_pd_senate_building: "Kopuła Senatu"
+ d_pd_senate_building_desc: "Kopuła Senatu, majestatyczny symbol rządów, góruje jako administracyjne serce, w którym kształtowana jest przyszłość naszej cywilizacji."
 
 #Palace
- decision_pd_arcology_palace: "Zbuduj kompleks pałacowy"
- decision_pd_arcology_palace_desc: "Aby odzwierciedlić potęgę i autorytet naszego imperium, wzniesiemy monumentalny pałac w stolicy. Ta wspaniała budowla ucieleśni siłę naszego przywództwa i znacząco zwiększy możliwości administracyjne rządu."
+ decision_pd_arcology_palace: "Zbuduj Kompleks Pałacowy"
+ decision_pd_arcology_palace_desc: "Aby odzwierciedlić potęgę i autorytet naszego imperium, wzniesiemy monumentalny Pałac w stolicy. Ta wspaniała budowla ucieleśni siłę naszego przywództwa i znacząco zwiększy możliwości administracyjne rządu."
  decision_pd_arcology_palace_effects: "Dodaje §Y$d_pd_palace_building$§! do tej stolicy, zamieniając potencjalne dzielnice w celu zwiększenia możliwości administracyjnych naszego rządu."
- d_pd_palace_building: "Kompleks pałacowy"
- d_pd_palace_building_desc: "Kompleks pałacowy, wielki symbol naszej suwerenności i potęgi władcy, dominuje nad stolicą. Jest sercem administracji, gdzie kształtowany jest los imperium."
+ d_pd_palace_building: "Kompleks Pałacowy"
+ d_pd_palace_building_desc: "Kompleks Pałacowy, wielki symbol naszej suwerenności i potęgi władcy, dominuje nad stolicą. Jest sercem administracji, gdzie kształtowany jest los imperium."
 
 #Headquarters
- decision_pd_arcology_headquarters: "Zbuduj planetarną kwaterę główną"
- decision_pd_arcology_headquarters_desc: "Aby ukazać potęgę i wpływy naszej megakorporacji, wzniesiemy strzelistą kwaterę główną w tym centrum gospodarczym. Ta imponująca konstrukcja będzie świadectwem siły naszego kierownictwa i znacząco usprawni nasze operacje galaktyczne."
+ decision_pd_arcology_headquarters: "Zbuduj Planetarną Kwaterę Główną"
+ decision_pd_arcology_headquarters_desc: "Aby ukazać potęgę i wpływy naszej megakorporacji, wzniesiemy strzelistą Kwaterę Główną w tym centrum gospodarczym. Ta imponująca konstrukcja będzie świadectwem siły naszego kierownictwa i znacząco usprawni nasze operacje galaktyczne."
  decision_pd_arcology_headquarters_effects: "Dodaje §Y$d_pd_headquarters_building$§! do tej stolicy, zamieniając potencjalne dzielnice w celu zwiększenia możliwości administracyjnych naszej korporacji."
- d_pd_headquarters_building: "Planetarna kwatera główna"
- d_pd_headquarters_building_desc: "Monumentalny symbol dominacji, ta kwatera góruje nad planetą. Jest centrum nerwowym naszych operacji, gdzie kształtowana jest przyszłość megakorporacji."
+ d_pd_headquarters_building: "Planetarna Kwatera Główna"
+ d_pd_headquarters_building_desc: "Monumentalny symbol dominacji, ta Kwatera góruje nad planetą. Jest centrum nerwowym naszych operacji, gdzie kształtowana jest przyszłość megakorporacji."
 
 #Hive Confluence Spire
- decision_pd_hive_confluence_spire: "Zbuduj iglicę zbieżności"
- decision_pd_hive_confluence_spire_desc: "Aby zamanifestować wyższość i zasięg naszego kolektywu, rozrośniemy potężną iglicę zbieżności. Ta imponująca konstrukcja znacząco wzmocni nasze działania wśród gwiazd."
+ decision_pd_hive_confluence_spire: "Zbuduj Iglicę Zbieżności"
+ decision_pd_hive_confluence_spire_desc: "Aby zamanifestować wyższość i zasięg naszego kolektywu, wyrośniemy potężną Iglicę Zbieżności. Ta imponująca konstrukcja znacząco wzmocni nasze działania wśród gwiazd."
  decision_pd_hive_confluence_spire_effects: "Dodaje §Y$d_pd_confluence_spire_building$§! do tej stolicy, zamieniając potencjalne dzielnice w celu zwiększenia naszych możliwości administracyjnych."
- d_pd_confluence_spire_building: "Iglica zbieżności"
- d_pd_confluence_spire_building_desc: "Ta iglica góruje nad powierzchnią planety, będąc strzelistym symbolem kontroli. To centrum woli kolektywu, gdzie misterna sieć naszego losu wśród gwiazd zostaje utkana."
+ d_pd_confluence_spire_building: "Iglica Zbieżności"
+ d_pd_confluence_spire_building_desc: "Ta Iglica góruje nad powierzchnią planety, będąc strzelistym symbolem kontroli. To centrum woli kolektywu, gdzie misterna sieć naszego losu wśród gwiazd zostaje utkana."
 
 #Machine Centralized Processing
- decision_pd_machine_centralized_processing: "Zbuduj centralną jednostkę przetwarzania"
- decision_pd_machine_centralized_processing_desc: "Aby potwierdzić naszą wyższość i zwiększyć zdolności operacyjne, skonstruujemy centralną jednostkę przetwarzania. Ta struktura znacząco usprawni nasze funkcje galaktyczne."
+ decision_pd_machine_centralized_processing: "Zbuduj Centralną Jednostkę Przetwarzania"
+ decision_pd_machine_centralized_processing_desc: "Aby potwierdzić naszą wyższość i zwiększyć zdolności operacyjne, skonstruujemy Centralną Jednostkę Przetwarzania. Ta struktura znacząco usprawni nasze funkcje galaktyczne."
  decision_pd_machine_centralized_processing_effects: "Dodaje §Y$d_pd_machine_centralized_processing$§! do tej stolicy, zamieniając potencjalne dzielnice w celu zwiększenia naszych możliwości administracyjnych."
- d_pd_machine_centralized_processing: "Centralna jednostka przetwarzania"
+ d_pd_machine_centralized_processing: "Centralna Jednostka Przetwarzania"
  d_pd_machine_centralized_processing_desc: "Jednostka ta dominuje nad powierzchnią planety i stanowi centralny węzeł naszych zbiorowych dyrektyw, precyzyjnie koordynując działania dronów."
