--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -1,9 +1,9 @@
 ﻿l_polish:
 
 #Origin
- origin_pd_aw_tree_of_life: "Drzewo życia megaflory"
+ origin_pd_aw_tree_of_life: "Drzewo Życia Megaflory"
  origin_pd_aw_tree_of_life_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem tak, aby odpowiadał zarówno jemu, jak i dronom. rój miałby ogromne trudności z przetrwaniem bez wsparcia tego drzewa."
- origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cecha planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planetarne: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cecha planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
+ origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cecha planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planetarne: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cecha planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek drzewa Życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
  origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Nie można terraformować planet"
 
 #Concepts
@@ -19,16 +19,16 @@
  concept_pd_aw_tree_of_life_holding_desc: "- $MOD_MONTHLY_LOYALTY_GAIN$: §G+1§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n- £food£ Żywność z £job_farmer£ ['concept_farmer']: §G+1§!\n- £mod_job_ranger_add£ ['concept_overlord_arborist', $job_overlord_arborist$] miejsca pracy: §G+1§!\n\n§L$holding_tree_of_life_sapling_desc$§!"
 
 #Deposit
- d_pd_aw_tree_of_life_home: "Drzewo życia"
- d_pd_aw_tree_of_life_home_desc: "Drzewo życia dawało schronienie i wsparcie umysłowi zbiorowemu przez niezliczone pokolenia."
- d_pd_aw_tree_of_life_colony: "Sadzonka drzewa życia"
- d_pd_aw_tree_of_life_colony_desc: "Pęd wielkiego drzewa, przesadzony tutaj przez rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
- d_pd_aw_tree_of_life_bloomed: "Zakwitłe drzewo życia"
- d_pd_aw_tree_of_life_bloomed_desc: "Wielkie drzewo od niezliczonych pokoleń dawało schronienie i wsparcie umysłowi zbiorowemu. Teraz, zakwitłe, roztacza swoje dobroczynne oddziaływanie na każdego drona."
- d_pd_tree_of_life_habitat: "Stacja mieszkalna drzewa życia"
- d_pd_tree_of_life_habitat_desc: "Odrośl wielkiego drzewa, przesadzony tutaj przez rój. Ta miniaturowa wersja w obrębie stacji mieszkalnej nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
- d_pd_tree_of_life_ringworld: "Świat pierścieniowy drzewa życia"
- d_pd_tree_of_life_ringworld_desc: "Odrośl wielkiego drzewa, przesadzony tutaj przez rój. Choć potrafi rosnąć na powierzchni świata pierścieniowego, to zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
+ d_pd_aw_tree_of_life_home: "Drzewo Życia"
+ d_pd_aw_tree_of_life_home_desc: "Drzewo Życia dawało schronienie i wsparcie umysłowi zbiorowemu przez niezliczone pokolenia."
+ d_pd_aw_tree_of_life_colony: "Sadzonka Drzewa Życia"
+ d_pd_aw_tree_of_life_colony_desc: "Pęd Wielkiego Drzewa, przesadzony tutaj przez rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
+ d_pd_aw_tree_of_life_bloomed: "Zakwitłe Drzewo Życia"
+ d_pd_aw_tree_of_life_bloomed_desc: "Wielkie Drzewo od niezliczonych pokoleń dawało schronienie i wsparcie umysłowi zbiorowemu. Teraz, zakwitłe, roztacza swoje dobroczynne oddziaływanie na każdego drona."
+ d_pd_tree_of_life_habitat: "Stacja mieszkalna Drzewa Życia"
+ d_pd_tree_of_life_habitat_desc: "Odrośl Wielkiego Drzewa, przesadzony tutaj przez rój. Ta miniaturowa wersja w obrębie stacji mieszkalnej nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
+ d_pd_tree_of_life_ringworld: "Świat pierścieniowy Drzewa Życia"
+ d_pd_tree_of_life_ringworld_desc: "Odrośl Wielkiego Drzewa, przesadzony tutaj przez rój. Choć potrafi rosnąć na powierzchni świata pierścieniowego, to zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
 
 #Planets
  pc_pd_megaflora_hive: "Świat Megaflory"
@@ -75,8 +75,8 @@
  describe_tree_of_life_bloomed_worlds: "§Y $pc_pd_megaflora_hive_bloomed$s§! to specjalna klasa planet, niezamieszkana przez Populacje inne niż Umysł zbiorowy, lecz nieograniczona w liczbie £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!, jakie mogą wspierać. Wszystkie dzielnice mają podwojone £pop£ §Ymiejsca pracy§! i liczbę £housing£ §Ymieszkań§!. £pop£ §YPopy§! żyjące na §YRozkwitły $pc_pd_megaflora_hive_bloomed$§! otrzymują premię do §Yprodukcji zasobów§! §G+10%§!."
 
 #Holdings
- holding_pd_aw_tree_of_life_sapling: "Sadzonka megaflory drzewa życia"
- holding_pd_aw_tree_of_life_sapling_desc: "Zwierzchnik tak długo żył ze swoim drzewem życia megaflory, że nie jest już w stanie wyobrazić sobie egzystencji bez niego. Teraz pragnie podzielić się tym samym darem ze swoimi wasalami."
+ holding_pd_aw_tree_of_life_sapling: "Sadzonka Drzewa Życia Megaflory"
+ holding_pd_aw_tree_of_life_sapling_desc: "Zwierzchnik tak długo żył ze swoim Drzewem Życia megaflory, że nie jest już w stanie wyobrazić sobie egzystencji bez niego. Teraz pragnie podzielić się tym samym darem ze swoimi wasalami."
 
 #Arcology - With Arc Sub Mod
  district_pd_flora_hive: "$district_hive$"
