--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_superprojects_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_superprojects_l_polish.yml
@@ -10,7 +10,7 @@
  pc_pd_core_tap_desc: "Ta skalista planeta gości teraz rozległą sieć maszyn drążących w jej rdzeniu, aby wydobywać pierwotną energię — świadectwo inżynieryjnej potęgi, które zniszczyło oryginalny ekosystem planety."
  pc_pd_core_tap_adj: "energetyczny"
  mod_pc_pd_core_tap_habitability: "Możliwość zamieszkania Megaodwiertu rdzenia"
- trait_pc_pd_core_tap_preference: "Preferencja Megaodwiertu rdzenia"
+ trait_pc_pd_core_tap_preference: "Preferencja - Megaodwiert rdzenia"
  trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
@@ -34,7 +34,7 @@
  pc_pd_agriworld_desc: "Ta skalista planeta obfituje w niekończące się pola przemysłowego rolnictwa, silnie polegającego na mocnych nawozach, złożonej kontroli pogody i zaawansowanych systemach irygacyjnych. Choć dostarcza nieprzerwanego plonu, zastąpiła naturalny ekosystem planety."
  pc_pd_agriworld_adj: "rolniczy"
  mod_pc_pd_agriworld_habitability: "Możliwość zamieszkania Agroświata"
- trait_pc_pd_agriworld_preference: "Preferencja Agroświata"
+ trait_pc_pd_agriworld_preference: "Preferencja - Agroświat"
  trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
@@ -58,7 +58,7 @@
  pc_pd_stripmine_desc: "Ta planeta to obecnie ogromne połacie głębokich odkrywkowych operacji górniczych, których powierzchnia poprzecinana jest labiryntem przemysłowych maszyn wydobywczych i wiertnic. Naturalny ekosystem został zniszczony w nieustannej pogoni za surowcami."
  pc_pd_stripmine_adj: "górniczy"
  mod_pc_pd_stripmine_habitability: "Możliwość zamieszkania Megakopalnii odkrywkowej"
- trait_pc_pd_stripmine_preference: "Preferencja Megakopalnii odkrywkowej"
+ trait_pc_pd_stripmine_preference: "Preferencja - Megakopalnia odkrywkowa"
  trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
