--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_lithoid_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_lithoid_l_polish.yml
@@ -29,7 +29,7 @@
  describe_lithoid_worlds: "§YŚwiaty litotroficzne§! to specjalna klasa planet z litotroficznymi ekosystemami, pozwalająca na dostrajanie częstotliwości wielkich struktur krystalicznych, co może zwiększyć $i_unity$, $i_minerals$ lub $i_energy$.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_logistic_growth_mult$: §G25%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$MOD_BIO_LOGISTIC_GROWTH_MULT$: §R-50%§!"
 
 #Notification Message
- MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ to teraz §YŚwiat litotroficzny§!"
+ MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ to teraz §Yświat litotroficzny§!"
  MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "Biom litotroficzny ukończony"
  MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "Biologiczny biom na $PLANET|Y$ został przywrócony."
  MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Biom litotroficzny usunięty"
