--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_planetary_infesters_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_planetary_infesters_l_polish.yml
@@ -7,7 +7,7 @@
  civic_tooltip_pd_planetary_infesters_effects: "Może budować £building£ $building_pd_aw_planet_infester_1$\n- $building_pd_planet_infestor_desc$\n- Świat macierzysty to $pc_hive$"
 
 #Buildings
- building_pd_planet_infestor_desc: "§YWęzły infestacji§! przechodzą przez trzy etapy rozwoju, stopniowo przekształcając planetę w §YŚwiat roju§!."
+ building_pd_planet_infestor_desc: "§YWęzły infestacji§! przechodzą przez trzy etapy rozwoju, stopniowo przekształcając planetę w §Yświat roju§!."
  building_pd_aw_planet_infester_1: "Węzeł infestacji – pierwszy etap"
  building_pd_aw_planet_infester_1_desc: "Ten węzeł, serce początkowej fazy infestacji, jest kluczowy dla obecności roju na tej planecie. Jego utrata rozluźniłaby więź roju z tym światem."
  building_pd_aw_planet_infester_2: "Węzeł infestacji – drugi etap"
