--- a/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
+++ b/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
@@ -118,13 +118,13 @@
 
 ###Hive+Machine Overmind Worlds
  #Planet Classess
- pc_pd_hive: "Świat nadświadomości roju"
+ pc_pd_hive: "Świat Nadświadomości Roju"
  pc_pd_hive_desc: "Ten świat jest kolosalnym żywym organizmem, nierozerwalnie związanym z umysłem zbiorowym, który go stworzył. Ukształtowany jako bastion zaawansowanych procesów myślowych, jest silnie broniony. Jego teren został przygotowany, by odeprzeć każdego niepożądanego przybysza."
  pc_pd_hive_adj: "$pc_hive_adj$"
  mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_preference_desc: "$trait_pc_hive_preference_desc$"
- pc_pd_machine: "Świat ogniwa maszyn"
+ pc_pd_machine: "Świat Ogniwa Maszyn"
  pc_pd_machine_desc: "Skalisty glob, którego powierzchnię pokrywają sztuczne konstrukcje podtrzymujące najbardziej zaawansowane procesy obliczeniowe. Cienka atmosfera składa się głównie z przemysłowych zanieczyszczeń i nie jest w stanie utrzymać życia biologicznego."
  pc_pd_machine_adj: "$pc_machine_adj$"
  mod_pc_pd_machine_habitability: "$mod_pc_machine_habitability$"
@@ -152,9 +152,9 @@
  district_pd_nexus_plural: "$district_nexus_plural$"
 
  #Modifiers
- pd_hive_military: "Świat nadświadomości"
+ pd_hive_military: "Świat Nadświadomości"
  pd_hive_military_desc: "Ta planeta jest kluczowa dla podstawowych funkcji umysłu zbiorowego i została ufortyfikowana przeciwko zewnętrznym zagrożeniom oraz wpływom. Potężna tarcza spowija świat, a wojownicze drony stoją w gotowości, zapewniając mu ochronę."
- pd_machine_military: "Świat ogniwa"
+ pd_machine_military: "Świat Ogniwa"
  pd_machine_military_desc: "Ta jednostka planetarna jest kluczowym elementem operacyjnej matrycy tej świadomości maszyn. Zabezpieczona przed zewnętrzną ingerencją, osłonięta nieprzenikalnym mechanizmem obronnym. Jednostki bojowe trwają w nieustannej gotowości, strzegąc integralności systemu."
 
  #Decisions
