--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_necro_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_necro_l_polish.yml
@@ -62,7 +62,7 @@
  ap_pd_necro_worlds: "Światy nekropolii"
  ap_pd_necro_worlds_desc: "Nasze światy pragną stać się rozległymi świątyniami, w których rozbrzmiewają echa naszego dziedzictwa o wiecznym znaczeniu."
  allow_necro_worlds: "§HOdblokowuje decyzję:§! $decision_pd_aw_necro_planet$"
- describe_necro_worlds: "Odblokowuje broń Kolosa §YPromień nekrozy planetarnej§! §R(wymaga Korzyści z rozwoju §Y$ap_colossus$§!)§!."
+ describe_necro_worlds: "Odblokowuje broń Kolosa: §YPromień nekrozy planetarnej§! §R(wymaga korzyści z rozwoju §Y$ap_colossus$§!)§!."
 
 #Necropolis District
  district_pd_aw_necro: "Dzielnica nekropolii"
