--- a/planetary_diversity/localisation/polish/planetarydiversity_engine_events_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_engine_events_l_polish.yml
@@ -1,8 +1,8 @@
 ﻿l_polish:
 
 ###Terraforming Event
- pdengine.21.name: "Terraformowanie ukończone"
- pdengine.21.desc: "Gdy zakończyliśmy terraformowanie §Y[From.GetName]§! dostaliśmy nową okazje by wybrać nowy biom dla tego świata."
+ pdengine.21.name: "Terraformacja zakończona"
+ pdengine.21.desc: "Po zakończeniu terraformacji §Y[From.GetName]§! mamy możliwość wyboru nowego biomu tego świata."
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -103,15 +103,15 @@
  pdengine.21.lichen: "$pc_pd_lichen$"
 
 ###Gaia Terraforming Event
- pdengine.24.name: "Gajańskie terraformowanie ukończone"
- pdengine.24.desc: "Gdy zakończyliśmy terraformowanie §Y[Root.GetName]§! dostaliśmy nową okazje by wybrać nowy biom dla tego świata."
+ pdengine.24.name: "Terraformacja świata gajańskiego zakończona"
+ pdengine.24.desc: "Po zakończeniu terraformacji §Y[Root.GetName]§! mamy możliwość wyboru nowego klimatu tego idealnego świata."
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
 
 ###Life Seeded Choice Event
- pdengine.90.name: "$civic_life_seeded$ Biome"
- pdengine.90.desc: "Nasi ludzie ewoluowali na tej rajskiej planecie, którą nazywamy §Y[Capital_scope.GetName]§!. Jaki biom jest naszą ojczyzną?"
+ pdengine.90.name: "Biom $civic_life_seeded$"
+ pdengine.90.desc: "Nasz lud ewoluował na tym rajskim świecie, który nazywamy §Y[Capital_scope.GetName]§!. Jaki klimat ma nasz świat macierzysty?"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -120,8 +120,8 @@
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
 
 ###Uncommon Gaia Terraforming Event
- pdengine.96.name: "Gajańskie terraformowanie ukończone"
- pdengine.96.desc: "Gdy zakończyliśmy terraformowanie §Y[From.GetName]§! dostaliśmy nową okazje by wybrać nowy biom dla tego świata."
+ pdengine.96.name: "Terraformacja świata gajańskiego zakończona"
+ pdengine.96.desc: "Po zakończeniu terraformacji §Y[From.GetName]§! mamy możliwość wyboru nowego klimatu tego idealnego świata."
  pdengine.96.wet_gaia_cave: "Wilgotny"
  pdengine.96.dry_gaia_cave: "Suchy"
  pdengine.96.cold_gaia_cave: "Zimny"
