Update +1 new line planetarydiversity_vanilla_overwrites_l_polish.yml
adds line:
mod_pc_savannah_habitability: "Możliwość zamieszkania świata stepowego"

--- a/planetary_diversity/localisation/polish/planetarydiversity_vanilla_overwrites_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_vanilla_overwrites_l_polish.yml
@@ -1,9 +1,10 @@
 ﻿l_polish:
 
- ###Vanilla savannah renamed
+###Vanilla savannah renamed
  pc_savannah:0 "Świat sawannowy"
  pc_savannah_tile:0 "Sawanna"
- trait_pc_savannah_preference:0 "Preferowany klimat: sawannowy"
+ trait_pc_savannah_preference:0 "Preferowany teren: sawannowy"
+ mod_pc_savannah_habitability: "Możliwość zamieszkania świata sawannowego"
 
 #Overwritten Vanilla Loc
- mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ od [GetAdministratorPluralWithIcon]"
