--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -31,18 +31,18 @@
  d_pd_tree_of_life_ringworld_desc: "Odrośl Wielkiego Drzewa, przesadzony tutaj przez rój. Choć potrafi rosnąć na powierzchni świata pierścieniowego, to zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
 
 #Planets
- pc_pd_megaflora_hive: "Świat Megaflory"
+ pc_pd_megaflora_hive: "Świat Megaflory Roju"
  pc_pd_megaflora_hive_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z umysłem zbiorowym, który je pielęgnuje. System korzeniowy planety stanowi podstawową strukturę konstrukcyjną i mieszkalną roju. Choć proces jego wzrostu jest powolny, zdolności regeneracyjne czynią go łatwym do obrony i naprawy."
- trait_pc_pd_megaflora_hive_preference: "Preferencja - świat megaflory"
+ trait_pc_pd_megaflora_hive_preference: "Preferencja - świat megaflory roju"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory"
- mod_pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory"
- pc_pd_megaflora_hive_bloomed: "Świat Megaflory"
+ pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory roju"
+ mod_pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory roju"
+ pc_pd_megaflora_hive_bloomed: "Świat Megaflory Roju"
  pc_pd_megaflora_hive_bloomed_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z umysłem zbiorowym, który je pielęgnuje."
- trait_pc_pd_megaflora_hive_bloomed_preference: "Preferencja - świat megaflory"
+ trait_pc_pd_megaflora_hive_bloomed_preference: "Preferencja - świat megaflory roju"
  trait_pc_pd_megaflora_hive_bloomed_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata megaflory"
- mod_pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata megaflory"
+ pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata megaflory roju"
+ mod_pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata megaflory roju"
 
 #Start Text
  START_SCREEN_PD_TREE_OF_LIFE: "Gdy przebudziliśmy się do świadomości, służyliśmy Drzewu, a Drzewo służyło nam. Opiekujemy się Drzewem, karmimy Drzewo, chronimy Drzewo, a Drzewo karmi nas. Dla dobra Drzewa rozprzestrzeniliśmy się po [GetHomeWorldName], sadząc i doglądając jego odrostów wszędzie, gdzie się udaliśmy.\n\nNasz świat służy Drzewu od stuleci, a jednak obawiamy się, że Drzewo nie jest całkowicie bezpieczne, odkąd poznaliśmy zagrożenia płynące z otchłani kosmosu. Od dawna wiemy, że to nie jedyna planeta; galaktyka pełna jest światów pozbawionych Drzew, a my pragniemy to zmienić.\n\nMusimy chronić Drzewo. Drzewo musi się rozprzestrzenić. Drzewo musi rosnąć."
