--- a/planetary_diversity_uniques/localisation/polish/pd_uniques_l_polish.yml
+++ b/planetary_diversity_uniques/localisation/polish/pd_uniques_l_polish.yml
@@ -1,73 +1,73 @@
 l_polish:
 ###Floating World
- sr_eludium:0 "Eludium Ore"
- sr_eludium_desc:0 "This exotic substance possesses many properties that defy the laws of physics. Only on this planet can it alter the mass of matter by affecting gravity."
- mod_planet_miners_sr_eludium_produces_add: "£sr_eludium£ $sr_eludium$ from £job_miner£ [GetMinerPlural]"
- pd_floating: "Floating World"
- pd_floating_desc: "This strange world features islands that float in the sky, supported by a rare ore found only here. The multiple layers of islands provide the planet with significantly more living space."
- pc_pd_floating: "Floating World"
- pc_pd_floating_desc: "A strange world features islands that float in the sky, supported by a rare ore found only here. The multiple layers of islands provide the planet with significantly more living space."
- pc_pd_floating_adj: "floating"
- mod_pc_pd_floating_habitability: "Floating Habitability"
- trait_pc_pd_floating_preference: "Floating Preference"
+ sr_eludium:0 "Ruda eludium"
+ sr_eludium_desc:0 "Ta egzotyczna substancja posiada wiele właściwości przeczących prawom fizyki. Tylko na tej planecie potrafi zmieniać masę materii poprzez oddziaływanie na grawitację."
+ mod_planet_miners_sr_eludium_produces_add: "£sr_eludium£ $sr_eludium$ z pracy £job_miner£ [GetMinerPlural]"
+ pd_floating: "Świat dryfujący"
+ pd_floating_desc: "Ten osobliwy świat posiada wyspy unoszące się w niebie, utrzymywane przez rzadką rudę występującą tylko tutaj. Wielopoziomowe warstwy wysp zapewniają planecie znacząco więcej przestrzeni życiowej."
+ pc_pd_floating: "Świat dryfujący"
+ pc_pd_floating_desc: "Osobliwy świat, na którym wyspy unoszą się w niebie dzięki rzadkiej rudzie występującej wyłącznie tutaj. Wielopoziomowe warstwy wysp zapewniają planecie znacząco więcej przestrzeni życiowej."
+ pc_pd_floating_adj: "dryfujący"
+ mod_pc_pd_floating_habitability: "Możliwość zamieszkania świata dryfującego"
+ trait_pc_pd_floating_preference: "Preferowanie świata dryfującego"
  trait_pc_pd_floating_preference_desc: "$trait_pc_arctic_preference_desc$"
- d_pd_floating_the_great_knot: "The Great Knot"
- d_pd_floating_the_great_knot_desc: "A scattered group of islands where ancient trees, uprooted by ever-changing winds, form natural bridges between floating landmasses. The unique wind patterns, diverse microclimates, and rare wildlife make this an ideal location for studying evolutionary adaptations and the resilience of life in dynamic environments."
- d_pd_floating_whispering_glades: "Whispering Glades"
- d_pd_floating_whispering_glades_desc: "A serene cluster of vertical floating islands hovers over meadows. The wind's gentle interaction with narrow passages creates a soothing, almost musical sound, ideal for relaxation and rejuvenation."
- d_pd_floating_skyfall_islands: "Skyfall Islands"
- d_pd_floating_skyfall_islands_desc: "A region of ring-shaped islands with a strong hydrosphere, where waterfalls cascade from the edges and vanish into the mist below. The breathtaking scenery and natural beauty make it a prime destination for trade and tourism, attracting visitors and merchants from across the galaxy."
- d_pd_floating_mining_operation: "Eludium Stirp-mine Operation"
- d_pd_floating_mining_operation_desc: "The planet's ecosystem, which had previously blocked large-scale mining operations, has been cleared to fully exploit the rare Eludium ore."
- d_pd_eludium_islands: "Eludium Islands"
- d_pd_eludium_islands_desc: "While this planet's bedrock is saturated with Eludium, many smaller islands contain concentrated deposits that are easy to access, allowing mining operations to have minimal environmental impact."
- decision_d_pd_the_great_knot_mining: "$d_pd_floating_the_great_knot$ Mining Operation"
- decision_d_pd_the_great_knot_mining_desc: "The area known as $d_pd_floating_the_great_knot$ will be developed into a large-scale Eludium mining operation."
- decision_d_pd_whispering_glades_mining: "$d_pd_floating_whispering_glades$ Mining Operation"
- decision_d_pd_whispering_glades_mining_desc: "The area known as the $d_pd_floating_whispering_glades$ will be developed into a large-scale Eludium mining operation."
- decision_d_pd_skyfall_islands_mining: "$d_pd_floating_skyfall_islands$ Mining Operation"
- decision_d_pd_skyfall_islands_mining_desc: "The area known as the $d_pd_floating_skyfall_islands$ will be developed into a large-scale Eludium mining operation."
- tech_eludium_research:1 "Eludium Refining"
- tech_eludium_research_desc: "Mining Eludium is straightforward, but it is much more complicated to understand its potential and refining process. Like all resources, unlocking its full potential will take time."
- tech_eludium_research_tt_desc: "§HUnlocks:§! Eludium Mining\n§HUnlocks:§! Eludium Edicts"
- edict_eludium_research:0 "Eludium Research Boost"
- edict_eludium_research_desc:0 "Empowering our labs with refined Eludium will supercharge the research capabilities of our physics departments."
- edict_eludium_energy:0 "Eludium Energy Grid"
- edict_eludium_energy_desc:0 "Incorporating Eludium as a hyper-conductive material within our energy grid amplifies its power throughput."
- edict_eludium_weapons:0 "Eludium Weapons Transistors"
- edict_eludium_weapons_desc:0 "Integrating Eludium-based transistors into our energy weapons drastically enhances their discharge velocity and impact yield."
- decision_pd_add_floating_island: "Create Artificial Floating Islands"
- decision_pd_add_floating_island_desc: "By harnessing the power of Eludium, we can lift entire islands into the skies of this world, unlocking vast new spaces for construction."
- d_pd_artifical_floating_islands: "Artificial Floating Islands"
- d_pd_artifical_floating_islands_desc: "Harnessing the power of Eludium, we have lifted entire islands into the skies of this world, unlocking vast new spaces for construction."
- tech_eludium_floating_islands: "Artificial Island Formation"
- tech_eludium_floating_islands_desc: "While the islands infused with Eludium float naturally, buoyancy devices can be created under the islands of other worlds, allowing us to significantly expand living space on other planets."
- tech_eludium_floating_islands_tt_desc: "§HUnlocks Decision:§! $decision_pd_add_floating_island$"
- building_pd_eludium_floating_resort: "Floating Resort"
- building_pd_eludium_floating_resort_desc: "Using Eludium to keep this structure aloft, this breathtaking resort offers spectacular views thanks to its sky-bound nature."
- tech_eludium_floating_resort: "Floating Resort Construction"
- tech_eludium_floating_resort_desc: "Using Eludium to keep the structures aloft, we can create breathtaking resorts that offer spectacular views due to their sky-bound nature."
- tech_eludium_floating_overseer: "Floating Overseer Stations"
- tech_eludium_floating_overseer_desc: "Using Eludium to keep structures aloft, we can create floating overseer stations to watch over our drones."
- building_pd_eludium_floating_overseer: "Floating Overseer Station"
- building_pd_eludium_floating_overseer_desc: "Using Eludium to keep the structures aloft, these floating overseer stations constantly remind the drones of their purpose."
- pd_origin_init_floating_NAME:0 "Floating System"
- pd_origin_init_floating_DESC:0 "A starting system containing the Floating World"
+ d_pd_floating_the_great_knot: "Wielki Węzeł"
+ d_pd_floating_the_great_knot_desc: "Rozproszona grupa wysp, na których pradawne drzewa, wyrwane przez zmienne wiatry, tworzą naturalne mosty pomiędzy unoszącymi się lądami. Unikalne wzorce wiatru, zróżnicowane mikroklimaty i rzadka fauna czynią to miejsce idealnym do badań nad adaptacjami ewolucyjnymi oraz odpornością życia w dynamicznym środowisku."
+ d_pd_floating_whispering_glades: "Szepczące Polany"
+ d_pd_floating_whispering_glades_desc: "Spokojny zespół pionowych, unoszących się wysp wznosi się nad łąkami. Delikatna interakcja wiatru z wąskimi przesmykami tworzy kojący, niemal muzyczny dźwięk, idealny do relaksu i regeneracji."
+ d_pd_floating_skyfall_islands: "Wyspy Spadającego Nieba"
+ d_pd_floating_skyfall_islands_desc: "Obszar pierścieniowych wysp o silnie rozwiniętej hydrosferze, gdzie wodospady spływają z krawędzi w przepaść, znikając we mgle poniżej. Zapierające dech w piersiach widoki i naturalne piękno czynią z tego miejsca główny cel handlu i turystyki, przyciągający odwiedzających i kupców z całej galaktyki."
+ d_pd_floating_mining_operation: "Eksploatacja eludium"
+ d_pd_floating_mining_operation_desc: "Ekosystem planety, który wcześniej uniemożliwiał prowadzenie wydobycia na dużą skalę, został usunięty, aby w pełni wykorzystać rzadką rudę eludium."
+ d_pd_eludium_islands: "Wyspy eludium"
+ d_pd_eludium_islands_desc: "Choć podłoże tej planety jest nasycone eludium, wiele mniejszych wysp zawiera skoncentrowane złoża łatwe do eksploatacji, pozwalając na prowadzenie wydobycia przy minimalnym wpływie na środowisko."
+ decision_d_pd_the_great_knot_mining: "Eksploatacja w Wielkim Węźle"
+ decision_d_pd_the_great_knot_mining_desc: "Obszar znany jako $d_pd_floating_the_great_knot$ zostanie przekształcony w zakrojone na szeroką skalę centrum wydobycia eludium."
+ decision_d_pd_whispering_glades_mining: "Eksploatacja w Szepczących Polanach"
+ decision_d_pd_whispering_glades_mining_desc: "Obszar znany jako $d_pd_floating_whispering_glades$ zostanie przekształcony w zakrojone na szeroką skalę centrum wydobycia eludium."
+ decision_d_pd_skyfall_islands_mining: "Eksploatacja na Wyspach Spadającego Nieba"
+ decision_d_pd_skyfall_islands_mining_desc: "Obszar znany jako $d_pd_floating_skyfall_islands$ zostanie przekształcony w zakrojone na szeroką skalę centrum wydobycia eludium."
+ tech_eludium_research:1 "Rafinacja eludium"
+ tech_eludium_research_desc: "Samo wydobycie eludium jest stosunkowo proste, lecz zrozumienie jego potencjału i procesu rafinacji jest znacznie bardziej złożone. Jak w przypadku wszystkich zasobów, pełne wykorzystanie jego możliwości wymaga czasu."
+ tech_eludium_research_tt_desc: "§HOdblokowuje:§! Wydobycie eludium\n§HOdblokowuje:§! Edykty związane z eludium"
+ edict_eludium_research:0 "Eludowe subsydia badawcze"
+ edict_eludium_research_desc:0 "Wzbogacenie naszych laboratoriów rafinowanym eludium znacząco zwiększy możliwości badawcze naszych działów fizyki."
+ edict_eludium_energy:0 "Eludowa sieć energetyczna"
+ edict_eludium_energy_desc:0 "Włączenie eludium jako materiału hiperprzewodzącego do naszej sieci energetycznej zwiększa jej przepustowość."
+ edict_eludium_weapons:0 "Eludowe tranzystory broni"
+ edict_eludium_weapons_desc:0 "Integracja tranzystorów opartych na eludium z naszą bronią energetyczną drastycznie zwiększa prędkość wyładowań i siłę uderzenia."
+ decision_pd_add_floating_island: "Stwórz sztuczne dryfujące wyspy"
+ decision_pd_add_floating_island_desc: "Wykorzystując moc eludium, możemy unieść całe wyspy w przestworza tego świata, odblokowując ogromne nowe przestrzenie pod zabudowę."
+ d_pd_artifical_floating_islands: "Sztuczne dryfujące wyspy"
+ d_pd_artifical_floating_islands_desc: "Wykorzystując moc eludium, unieśliśmy całe wyspy w przestworza tego świata, odblokowując ogromne nowe przestrzenie pod zabudowę."
+ tech_eludium_floating_islands: "Formacja sztucznych wysp"
+ tech_eludium_floating_islands_desc: "Podczas gdy wyspy nasycone eludium unoszą się naturalnie, na innych światach można tworzyć urządzenia wypornościowe pod wyspami, co pozwala znacząco powiększyć przestrzeń życiową."
+ tech_eludium_floating_islands_tt_desc: "§HOdblokowuje decyzję:§! $decision_pd_add_floating_island$"
+ building_pd_eludium_floating_resort: "Dryfujący kurort"
+ building_pd_eludium_floating_resort_desc: "Używając eludium, aby utrzymać tę konstrukcję w powietrzu, stworzyliśmy zapierający dech w piersiach kurort oferujący spektakularne widoki z wysokości nieba."
+ tech_eludium_floating_resort: "Budowa dryfujących kurortów"
+ tech_eludium_floating_resort_desc: "Używając eludium do unoszenia konstrukcji, możemy tworzyć zapierające dech w piersiach kurorty, które oferują spektakularne widoki dzięki swojej podniebnej lokalizacji."
+ tech_eludium_floating_overseer: "Dryfujące stacje nadzorcze"
+ tech_eludium_floating_overseer_desc: "Używając eludium do unoszenia konstrukcji, możemy tworzyć stacje nadzorcze, które będą górować nad naszymi dronami."
+ building_pd_eludium_floating_overseer: "Dryfująca stacja nadzorcza"
+ building_pd_eludium_floating_overseer_desc: "Unosząc się dzięki mocy eludium, te stacje nadzorcze nieustannie przypominają dronom o ich przeznaczeniu."
+ pd_origin_init_floating_NAME:0 "Układ dryfujący"
+ pd_origin_init_floating_DESC:0 "Układ początkowy zawierający Świat dryfujący"
 
  #Events
- pdfloating.100.name: "Islands in the Sky"
- pdfloating.100.desc: "After completing its scan of §Y[From.GetName]§!, the §Y[Root.GetName]§! reports a remarkable discovery. This planet's landmasses float in the sky, defying physics due to a unique ore called Eludium.\n\nThe properties of this extraordinary ore warrant further investigation. Securing and holding this planet will be crucial for studying Eludium's potential and unlocking its secrets."
- pdfloating.100.a: "How amazing."
-
+ pdfloating.100.name: "Wyspy na niebie"
+ pdfloating.100.desc: "Po zakończeniu skanowania §Y[From.GetName]§! statek §Y[Root.GetName]§! zgłosił niezwykłe odkrycie. Lądy na tej planecie unoszą się w powietrzu, przecząc prawom fizyki dzięki unikalnej rudzie zwanej eludium.\n\nWłaściwości tego niezwykłego pierwiastka wymagają dalszych badań. Zabezpieczenie tej planety będzie kluczowe, aby poznać potencjał eludium i odkryć jego tajemnice."
+ pdfloating.100.a: "Niesamowite."
+ 
  #Origin
- origin_pd_floating_world:0 "Islands in the Sky"
- origin_pd_floating_world_desc:0 "This civilization evolved on a world unlike any other in the galaxy. Thanks to the element Eludium, this planet's landmasses float effortlessly through the sky."
- origin_tooltip_floating_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_continental$§! (Size: £planetsize£ 20)$TABBED_NEW_LINE$- ['concept_pd_floating'] Planet Modifier$TABBED_NEW_LINE$- Two ['concept_d_pd_eludium_islands'] Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- ['concept_eludium_research', £engineering_research£ $tech_eludium_research$]$TABBED_NEW_LINE$- ['concept_eludium_floating_islands', £physics_research£ $tech_eludium_floating_islands$]$TABBED_NEW_LINE$- ['concept_eludium_floating_resort', £physics_research£ $tech_eludium_floating_resort$] (Regular Empires)$TABBED_NEW_LINE$- ['concept_eludium_floating_overseer', £physics_research£ $tech_eludium_floating_overseer$] (Gestalt Empires)"
+ origin_pd_floating_world:0 "Wyspy na niebie"
+ origin_pd_floating_world_desc:0 "Ta cywilizacja rozwinęła się na świecie, jakiego nie ma nigdzie indziej w galaktyce. Dzięki pierwiastkowi eludium lądy tej planety swobodnie unoszą się w powietrzu."
+ origin_tooltip_floating_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_continental$§! (Rozmiar: £planetsize£ 20)$TABBED_NEW_LINE$- Modyfikator planety ['concept_pd_floating']$TABBED_NEW_LINE$- Dwie cechy planety ['concept_d_pd_eludium_islands']\n- Dostęp do dodatkowych technologii:$TABBED_NEW_LINE$- ['concept_eludium_research', £engineering_research£ $tech_eludium_research$]$TABBED_NEW_LINE$- ['concept_eludium_floating_islands', £physics_research£ $tech_eludium_floating_islands$]$TABBED_NEW_LINE$- ['concept_eludium_floating_resort', £physics_research£ $tech_eludium_floating_resort$] (Zwykłe imperia)$TABBED_NEW_LINE$- ['concept_eludium_floating_overseer', £physics_research£ $tech_eludium_floating_overseer$] (Imperia umysłu zbiorowego)"
  concept_pd_floating: "$pd_floating$"
  concept_pd_floating_desc: "- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G10§!\n- $mod_planet_districts_upkeep_mult$: §R25%§!\n- $mod_planet_buildings_upkeep_mult$: §R25%§!"
  concept_d_pd_eludium_islands: "$d_pd_eludium_islands$"
  concept_d_pd_eludium_islands_desc: "- $mod_district_mining_max$: §G4§!\n- $planet_miners_sr_eludium_produces_add$: §G0.25§!"
- planet_miners_sr_eludium_produces_add: "£sr_eludium£ $sr_eludium$ from £job_miner£ Miners"
+ planet_miners_sr_eludium_produces_add: "£sr_eludium£ $sr_eludium$ z miejsc pracy £job_miner£ Górników"
  concept_eludium_research: "$tech_eludium_research$"
  concept_eludium_research_desc: "$tech_eludium_research_tt_desc$\n\n§L$tech_eludium_research_desc$§!"
  concept_eludium_floating_islands: "$tech_eludium_floating_islands$"
