--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_necro_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_necro_l_polish.yml
@@ -49,13 +49,13 @@
 
 #Modifiers
  pd_aw_necro_planet: "Nekropolia"
- pd_aw_necro_planet_tooltip: "£unity£ $unity$ od [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_aw_necro_planet_tooltip: "£unity£ $unity$ z miejsc pracy [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
  pd_aw_necro_planet_desc: "Ten świat to rozległa świątynia, a jego powierzchnia rozbrzmiewa echami wiecznego znaczenia."
  pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
  pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
- pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ od [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ z miejsc pracy [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
  pd_necro_planet: "Nekropolia"
- pd_necro_planet_tooltip: "£unity£ $unity$ od [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_necro_planet_tooltip: "£unity£ $unity$ z miejsc pracy [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
  pd_necro_planet_desc: "Ten świat to rozległa świątynia, a jego powierzchnia rozbrzmiewa echami wiecznego znaczenia."
 
 #Acension Perk
