--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -16,7 +16,7 @@
  concept_transplant_pd_aw_tree_of_life: "$decision_pd_replant_aw_tree_of_life$"
  concept_transplant_pd_aw_tree_of_life_desc: "Zasadź ponownie Drzewo Życia na tej planecie.\n\n§L$decision_pd_replant_aw_tree_of_life_desc$§!"
  concept_pd_aw_tree_of_life_holding: "$holding_tree_of_life_sapling$"
- concept_pd_aw_tree_of_life_holding_desc: "- $MOD_MONTHLY_LOYALTY_GAIN$: §G+1§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n- £food£ Żywność z £job_farmer£ ['concept_farmer']: §G+1§!\n- £mod_job_ranger_add£ ['concept_overlord_arborist', $job_overlord_arborist$] miejsca pracy: §G+1§!\n\n§L$holding_tree_of_life_sapling_desc$§!"
+ concept_pd_aw_tree_of_life_holding_desc: "- $MOD_MONTHLY_LOYALTY_GAIN$: §G+1§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n- £food£ Żywność z miejsc pracy £job_farmer£ ['concept_farmer']: §G+1§!\n- £mod_job_ranger_add£ ['concept_overlord_arborist', $job_overlord_arborist$] miejsca pracy: §G+1§!\n\n§L$holding_tree_of_life_sapling_desc$§!"
 
 #Deposit
  d_pd_aw_tree_of_life_home: "Drzewo Życia"
