--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_planetary_infesters_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_planetary_infesters_l_polish.yml
@@ -8,9 +8,9 @@
 
 #Buildings
  building_pd_planet_infestor_desc: "§YWęzły infestacji§! przechodzą przez trzy etapy rozwoju, stopniowo przekształcając planetę w §Yświat roju§!."
- building_pd_aw_planet_infester_1: "Węzeł infestacji – pierwszy etap"
+ building_pd_aw_planet_infester_1: "Węzeł infestacji – etap pierwszy"
  building_pd_aw_planet_infester_1_desc: "Ten węzeł, serce początkowej fazy infestacji, jest kluczowy dla obecności roju na tej planecie. Jego utrata rozluźniłaby więź roju z tym światem."
- building_pd_aw_planet_infester_2: "Węzeł infestacji – drugi etap"
+ building_pd_aw_planet_infester_2: "Węzeł infestacji – etap drugi"
  building_pd_aw_planet_infester_2_desc: "Ten ogromny węzeł, będący w pośrednim stadium infestacji, łączy się z rojem na tyle mocno, by wpływać na kluczowe procesy planetarne. Jego utrata rozluźniłaby więź roju z tym światem."
  building_pd_aw_planet_infester_3: "Planetarny węzeł infestacji"
  building_pd_aw_planet_infester_3_desc: "Osiągnąwszy swój szczyt, ten potężny węzeł sprawuje całkowitą kontrolę nad procesami planetarnymi. Jego utrata rozluźniłaby więź roju z tym światem."
