--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -22,13 +22,13 @@
  d_pd_aw_tree_of_life_home: "Drzewo Życia"
  d_pd_aw_tree_of_life_home_desc: "Drzewo Życia dawało schronienie i wsparcie umysłowi zbiorowemu przez niezliczone pokolenia."
  d_pd_aw_tree_of_life_colony: "Sadzonka Drzewa Życia"
- d_pd_aw_tree_of_life_colony_desc: "Pęd Wielkiego Drzewa, przesadzony tutaj przez rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
+ d_pd_aw_tree_of_life_colony_desc: "Pęd Wielkiego Drzewa, przeszczepiony tutaj przez rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
  d_pd_aw_tree_of_life_bloomed: "Zakwitłe Drzewo Życia"
  d_pd_aw_tree_of_life_bloomed_desc: "Wielkie Drzewo od niezliczonych pokoleń dawało schronienie i wsparcie umysłowi zbiorowemu. Teraz, zakwitłe, roztacza swoje dobroczynne oddziaływanie na każdego drona."
  d_pd_tree_of_life_habitat: "Stacja mieszkalna Drzewa Życia"
- d_pd_tree_of_life_habitat_desc: "Odrośl Wielkiego Drzewa, przesadzony tutaj przez rój. Ta miniaturowa wersja w obrębie stacji mieszkalnej nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
+ d_pd_tree_of_life_habitat_desc: "Pęd Wielkiego Drzewa, przeszczepiony tutaj przez rój. Ta miniaturowa wersja w obrębie stacji mieszkalnej nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
  d_pd_tree_of_life_ringworld: "Świat pierścieniowy Drzewa Życia"
- d_pd_tree_of_life_ringworld_desc: "Odrośl Wielkiego Drzewa, przesadzony tutaj przez rój. Choć potrafi rosnąć na powierzchni świata pierścieniowego, to zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
+ d_pd_tree_of_life_ringworld_desc: "Pęd Wielkiego Drzewa, przeszczepiony tutaj przez rój. Choć potrafi rosnąć na powierzchni świata pierścieniowego, to zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
 
 #Planets
  pc_pd_megaflora_hive: "Świat Megaflory Roju"
