--- a/planetary_diversity/localisation/polish/planetarydiversity_vanilla_overwrites_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_vanilla_overwrites_l_polish.yml
@@ -7,4 +7,4 @@
  mod_pc_savannah_habitability: "Możliwość zamieszkania świata sawannowego"
 
 #Overwritten Vanilla Loc
- mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ od [GetAdministratorPluralWithIcon]"
+ mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ z miejsc pracy [GetAdministratorPluralWithIcon]"
