--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
@@ -3,7 +3,7 @@
 #Flooded/Aquatic Planets
  decision_pd_aw_flood_planet: "Poszerz morza planety"
  decision_pd_aw_flood_planet_desc: "Ta oceaniczna planeta ma potencjał, by stać się idealnym domem dla naszego ludu. Poprzez podniesienie poziomu mórz i przeniesienie miast pod wodę zapewnimy rozwój życia przystosowanego do głębin."
- decision_pd_aw_flood_planet_tooltip: "Lód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§!\nDodany zostanie modyfikator §Y$pd_aw_flooded_planet$§!:\n$pd_aw_flooded_planet_tooltip$"
+ decision_pd_aw_flood_planet_tooltip: "Lód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§!\nDo §Y$pd_aw_flooded_planet$§! dodany zostanie modyfikator:\n$pd_aw_flooded_planet_tooltip$"
  flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNie-akwatyczni§! Możliwość zamieszkania: §R-20%§!"
  decision_pd_aw_unflood_planet: "Osusz planetę"
  decision_pd_aw_unflood_planet_desc: "Ta oceaniczna planeta ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na wyspy, możemy zapewnić rozwój życia przystosowanego do lądu."
